--- a/ExhibitionMagazineShelf/ExhibitionMagazineShelf-Info.plist
+++ b/ExhibitionMagazineShelf/ExhibitionMagazineShelf-Info.plist
@@ -14,13 +14,13 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
-				<string>Default-Portrait~ipad.png</string>
-				<string>Default-Landscape~ipad.png</string>
+				<string>Icon-72.png</string>
+				<string>Icon-72-small.png</string>
 			</array>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>cn.TodaySybor.ExhibitionMagazineShelf.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.vrdam.shelf</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
