--- a/ExhibitionMagazineShelf/ExhibitionMagazineShelf-Info.plist
+++ b/ExhibitionMagazineShelf/ExhibitionMagazineShelf-Info.plist
@@ -20,7 +20,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.vrdam.shelf</string>
+	<string>com.vrdam.exhibition</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
